# execubot-kernel

./: .gitignore  README.md  alembic.ini  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: foundation-checks.yml
agents/: data-agent.md  engineering-agent.md  execubot.md  finance-agent.md  operations-agent.md  product-agent.md  registry.yaml
backlog/: backlog.md  milestone-2-local-kernel-skeleton.md  milestones.md  next-30-days.md
docker/: README.md  docker-compose.dev.yml  env.example
docs/: architecture.md  decisions.md  docker-environment.md  github-workflow.md  linear-organization.md  memory-architecture.md  roadmap.md  task-breakdown.md  telegram-interface.md
execubot/: __init__.py
execubot/api/: main.py  schemas.py
execubot/api/routes/: audit.py  memory.py  tasks.py
execubot/core/: __init__.py  config.py  database.py  models.py
execubot/migrations/: README.md  env.py
execubot/migrations/versions/: 20260617_0001_initial_tables.py
tests/: test_api_endpoints.py  test_config.py  test_health.py  test_project_contract.py
