[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "execubot-kernel"
version = "0.1.0"
description = "Docker-based AI agent orchestration kernel foundation."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13",
    "fastapi>=0.115",
    "psycopg[binary]>=3.2",
    "pydantic>=2.8",
    "sqlalchemy>=2.0",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
    "pytest>=8.3",
]

[tool.setuptools.packages.find]
include = ["execubot*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
